# descriptor-codec

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: decode.rs  decoder.rs  dummy.rs  encode.rs  encoder.rs  lib.rs  main.rs  tag.rs  test_helpers.rs
