[package]
name = "descriptor-codec"
version = "0.1.1"
description = "Encode and decode Bitcoin wallet descriptors with a 30-40% size reduction"
keywords = [ "bitcoin", "descriptor", "miniscript", "codec", "encode" ]
authors = ["Joshua Doman <joshsdoman@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/joshdoman/descriptor-codec"
repository = "https://github.com/joshdoman/descriptor-codec"
edition = "2024"
readme = "README.md"
rust-version = "1.85.0"

[features]
cli = ["anyhow", "clap", "hex"]
default = ["std"]
std = ["bitcoin/std", "miniscript/std"]
compiler = []
trace = []

[dependencies]
anyhow = { version = "1.0.98", optional = true }
bitcoin = "0.32.5"
miniscript = "12.3.2"
clap = { version = "4.4", features = ["derive"], optional = true }
hex = { version = "0.4.3", optional = true }
